# club-moorage-mcp

./: README.md  pyproject.toml
.github/workflows/: version-tag.yml
docs/superpowers/plans/: 2026-06-12-rvyc-live-availability.md
docs/superpowers/specs/: 2026-06-12-rvyc-live-availability-design.md
ingest/: build_records.py  reciprocals.yaml
src/club_moorage_mcp/: geo.py  models.py  rvyc.py  server.py  store.py  tools.py
src/club_moorage_mcp/data/outstations/: rvyc-friday-harbor.md  rvyc-long-harbour.md
src/club_moorage_mcp/data/reciprocals/: burrard-yacht-club.md  canadian-forces-sailing-association.md  corinthian-yacht-club-of-bellingham.md  deep-bay-yacht-club.md  eagle-harbour-yacht-club.md  edmonds-yacht-club.md  false-creek-yacht-club.md  fidalgo-yacht-club.md  kingston-cove-yacht-club.md  ladner-yacht-club.md  ladysmith-yacht-club.md  nanaimo-yacht-club.md  orcas-island-yacht-club.md  point-roberts-yacht-club.md  port-angeles-yacht-club.md  port-ludlow-yacht-club.md  queen-city-yacht-club.md  royal-vancouver-yacht-club.md  saltspring-island-sailing-club.md  san-juan-island-yacht-club.md  schooner-cove-yacht-club.md  seattle-yacht-club.md  sequim-bay-yacht-club.md  silva-bay-yacht-club.md  swinomish-yacht-club.md
src/outstations_mcp/: geo.py  models.py  server.py  store.py  tools.py
tests/: test_data_rvyc.py  test_geo.py  test_models.py  test_reciprocals.py  test_rvyc.py  test_rvyc_live.py  test_server.py  test_store.py  test_tools.py
tests/fixtures/rvyc/: login_form.html  schedule_all_booked.json  schedule_mixed.json
(+26 files in other folders)
