[project]
name = "club-moorage-mcp"
version = "0.5.0"
description = "MCP server serving yacht-club moorage records — RVYC outstations + reciprocal partner clubs — with overnight-comfort ranking"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Bryan Clark", email = "clarkbw@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.27.1",
    "pyyaml>=6.0.2",
    "pilotbook-mcp>=0.1.7",
    "httpx>=0.27",
]

[project.scripts]
club-moorage-mcp = "club_moorage_mcp.server:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
pilotbook-mcp = { git = "https://github.com/sailingnaturali/pilotbook-mcp", tag = "v0.1.7" }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
